# u2f-rs

./: .gitignore  Cargo.toml
examples/u2f-sample-app/: README.md  main.rs  util.rs
examples/u2f-sample-app/static/: index.html
src/: crypto.rs  lib.rs  messages.rs  register.rs  tests.rs
